Fix - responsive align text vertical middle

--- a/src/_base.scss
+++ b/src/_base.scss
@@ -25,11 +25,15 @@
     position: absolute;
 
     & + label {
-      display: block;
+      display: flex;
+      height: 100%;
+      width: 100%;
       background-size: 200%;
       padding: 5px;
       margin: 0;
       cursor: pointer;
+      align-items: center;
+      justify-content: center;
       transition: 0.3s ease-out;
       position: relative;
       z-index: 1;
